--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "gatsby-plugin-manifest": "^4.13.0",
     "gatsby-plugin-offline": "^5.13.0",
     "gatsby-plugin-react-helmet": "^5.13.0",
-    "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-plugin-sharp": "^4.14.0",
     "gatsby-plugin-styled-components": "^5.13.0",
+    "gatsby-remark-images": "^6.14.0",
+    "gatsby-remark-lazy-load": "^1.0.2",
+    "gatsby-remark-prismjs": "^6.14.0",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^4.13.0",
     "gatsby-transformer-remark": "^5.13.0",
     "gatsby-transformer-sharp": "^4.13.0",
+    "lazysizes": "^5.3.2",
+    "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
