--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
+    "react-disqus-comments": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.5",
